no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -2465,7 +2465,8 @@ constants                                       #Low-level file-system constants
 
 FS.promises                                     #Like FS but:
                                                 #  - return PROMISE instead
-                                                #     - no FS.unwatch|watchFile() nor FS.*Stream()
+                                                #     - no FS.unwatch|watchFile()
+                                       <16.11.0*#       nor FS.create*Stream()
                                         14.18.0*#  - FS.watch() returns ASYNC_ITERATOR of OBJ: eventType 'EVENT', filename SBUFFER
                                                 #  - FD_INT are FILE_HANDLE instead
                                                 #     - no FS.close() but FILE_HANDLE.close() is available
