--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -3805,6 +3805,8 @@ DEBUG_FUNC(...)                                 #Like console.error(...) except:
 DEBUG_FUNC.enabled                              #BOOL
                                                 #Def: if ENVVAR NODE_DEBUG "STR2,..." (can include *) includes STR
 
+stripVTControlCharacters(STR)->STR      16.11.0*#Remove ANSI sequences
+
 promisify(FUNC(..., FUNC2(ERROR, VAL)))->FUNC   #Transform FUNC so FUNC(...)->PROMISE(ERROR|VAL)
                                                 #If calling FUNC(..., FUNC2), FUNC2 still gets called, and PROMISE do not get
                                                 #resolved|rejected
