no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -896,7 +896,7 @@ OBJECT MODE ==>                                 #SVAL is any VAL (except null):
                                                 #  - highWaterMark is per-SVAL and defaults to 16
 
 ISTREAM ==>                                     #Input stream. Actually called Readable
-new STREAM.Readable([OBJ])                      #OBJ:
+new Readable([OBJ])                             #OBJ:
                                                 #  - encoding 'ENCODING' (def: null, i.e. uses BUFFER)
                                                 #  - objectMode BOOL: see above
                                                 #  - highWaterMark NUM:
@@ -1014,8 +1014,8 @@ promises.*
 require('stream/promises').*             15.0.0*#Promisified version of finished|pipeline()
 
 IOSTREAM ==>                                    #Implement both ISTREAM and OSTREAM. Actually called either:
-                                                #  - STREAM.Duplex
-                                                #  - STREAM.Transform:
+                                                #  - Stream.Duplex
+                                                #  - Stream.Transform:
                                                 #     - same but where there is a correlation between input and output (ex: crypto, but not HTTP)
                                                 #     - only semantic
 
@@ -1060,6 +1060,9 @@ WritableStreamDefaultWriter
 TransformStream
 ByteLengthQueuingStrategy                16.5.0*#See DOM doc
 CountQueuingStrategy                     16.5.0*#Print experimental warning
+
+STREAM.Readable.fromWeb(RSTREAM[, OPTS])
+ ->ISTREAM                              16.11.0*#OPTS: like new Readable()
 
 
                                              /=+===============================+=\
@@ -1762,7 +1765,7 @@ HTTPSERVER|REQ.maxHeadersCount                  #Maximum number of headers incom
 HTTPSERVER.maxHeaderSize
 --max-http-header-size NUM                      #Def: 16KB. If above, fires 'clientError'.
                                                 #If no 'clientError' handler, returns 431.
-HTTPSERVER.maxRequestsPerSocket         16.10.0*#NUM (def: none)
+HTTPSERVER.maxRequestsPerSocket         16.10.0*#NUM (def: 0)
                                         16.10.0*#When reached, keeps connections open but:
                                         16.10.0*#  - Set Connection: closed [S] and
                                         16.10.0*#  - Respond to any new request with 503
@@ -3302,7 +3305,7 @@ createHash(STR[, OPTS])                         #Returns a HASH, i.e. a IOSTREAM
                                                 #CRYPTO.getHashes() gives list of supported hashes algos, as STR_ARR:
                                                 #includes [EC]DSA, DSS1, MD4|5, RIPEMD, RMD, SHA1|224|256|384|512, Whirlpool
                                                 #OPTS:
-                                                #  - same as STREAM.Transform(OPTS)
+                                                #  - same as Stream.Transform(OPTS)
                                                 #  - outputLength NUM (in bytes)
 HASH.copy([OPTS])->HASH2                        #Clone. Keep state. Doe snot work if HASH already closed.
 
@@ -3315,7 +3318,7 @@ createCipheriv(STR, STDBUFFER|KEY,STDBUFFER|null#Same but for a CIPHER (sym. cip
                                                 #operation), as STR_ARR: includes AES, Blowfish, Camellia, CAST, DES, DES3,
                                                 #DES-X, IDEA, RC2, RC4, SEED, ChaCha
                                                 #OPTS:
-                                                #  - any of STREAM.Transform()
+                                                #  - any of Stream.Transform()
                                                 #  - authTagLength NUM (def: 16): 4-16 (must be even number)
                                          15.0.0*#STDBUFFER can be STDABUFFER
 CIPHER.setAutoPadding(BOOL)                     #If false (def: true), disables padding (PKCS padding).
