no commit message

--- a/Languages/Go/go_language.language.txt
+++ b/Languages/Go/go_language.language.txt
@@ -368,7 +368,7 @@ func(...) [...] {...}             #Anonymous function (no FUNC name)
                                   #Higher operator priority than FUNC(), i.e. can do func(...) {...}(...)
 
 func(...) [...]                   #Function TYPE
-                                  #I.e. anonymous functions can FUNC arguments
+                                  #I.e. anonymous functions can be used as FUNC arguments
                                   #Receiver is not part of function TYPE
 
 return [MVAL]                     #Required when there is a return TYPE2. Optional otherwise.
