no commit message

--- a/Languages/Go/go_language.language.txt
+++ b/Languages/Go/go_language.language.txt
@@ -194,8 +194,8 @@ type (TYPE TYPE2;...)             #Type definition
 
 
 UNDERLYING TYPE ==>               #TYPE after type resolution. Used on:
-                                  #  - untyped constant type inference
                                   #  - operators (like + .VAR (...) ...)
+                                  #  - untyped constant type inference
                                   #For assignments (= and function calls), transtype rules are used instead.
 
 TYPE IDENTITY ==>                 #Identical TYPEs do not require transtyping.
@@ -219,9 +219,9 @@ IMPLICIT TRANSTYPE ==>            #Not needed for identical TYPEs.
                                   #For type definition (type TYPE TYPE2):
                                   #  - TYPE inherits allowed transtypes from TYPE2
                                   #  - If TYPE2:
+                                  #     - literal|composite: can transtype TYPE <-> TYPE2
                                   #     - type name: cannot transtype TYPE <-> TYPE2
                                   #        - but if builtin simple type name: can transtype to untyped constant, with underlying TYPE2
-                                  #     - literal|composite: can transtype TYPE <-> TYPE2
                                   #Example:
                                   #  type A int   // A </>     int   A <=>     5
                                   #  type B   A   // B </>   A|int   B <=>   int
@@ -244,7 +244,7 @@ NUM -> other NUM                  #Not if:
 UINT32|RUNE -> STR
 []UINT32|[]RUNE <-> STR           #Using Unicode codepoint
 CHAN -> other CHAN                #Only if does not lose receiver|sender direction.
-                                  #E.g. CHAN to CHAN<-, CHAN to <-CHAN, but not inverse.
+                                  #I.e. CHAN to CHAN<-, CHAN to <-CHAN, but not inverse.
 
 
                                              /=+===============================+=\
@@ -302,16 +302,16 @@ var (VAR,... [TYPE] = MVAL;...)   #     - complex128 if imaginary part
                                   #  - cannot be nil
 VAR := VAL                        #Shortcut syntax for var VAR = VAL, except:
 VAR,... := MVAL                   #  - can be in if|for|switch first optional EXPR
-                                  #  - cannot be top-level scope
+                                  #  - cannot be in top-level scope
 
 CONST_VAL                         #Value evaluated at compile-time
                                   #Restrictions:
-                                  #  - only simple types, not composite.
+                                  #  - only simple types, not composite
                                   #     - not Math.Inf|NaN()
-                                  #  - only literals or const VAR.
-                                  #    Not var VAR.
-                                  #  - operators, TYPE(), builtin FUNC imag|real|complex|len|cap(), unsafe.Sizeof|Offsetof|Alignof().
-                                  #    Not other FUNC()
+                                  #  - only literals or const VAR
+                                  #     - not var VAR
+                                  #  - operators, TYPE(), builtin FUNC imag|real|complex|len|cap(), unsafe.Sizeof|Offsetof|Alignof()
+                                  #     - not other FUNC()
                                   #If not typed at declaration-time, "untyped constant". Becomes typed when:
                                   #  - needs type through type inference
                                   #     - e.g. passed as argument|operand or assigned to var VAR
@@ -635,7 +635,7 @@ struct                            #STRUCT_TYPE
                                   #  - TYPE must be type name, not type literal
                                   #     - can be *TYPE
                                   #  - if TYPE is STRUCT_TYPE|INTERFACE_TYPE, can access TYPE.* directly from STRUCT_TYPE.* ("promoted field")
-                                  #     - exluding in literal STRUCT_TYPE{...}
+                                  #     - not in literal STRUCT_TYPE{...}
                                   #     - if parent TYPE can have same property, parent property shadows it
                                   #     - also add its "method set"
                                   #STR is "tag":
@@ -686,7 +686,7 @@ RECEIVER_TYPE.FUNC
 INTERFACE_TYPE.FUNC               #Same, but only retrieving the function value. Can be used for binding.
 
 interface {                       #INTERFACE_TYPE
-  [FUNC(...) [...]];...           #FUNC(...) [...] is like FUNC_TYPE but with a function name
+  [FUNC(...) [...]];...           #FUNC(...) [...] syntax is like FUNC_TYPE but with a function name
   [INTERFACE_TYPE2];...           #If INTERFACE_TYPE2, include its methods ("embedded")
 }                                 #  - if some methods already exists, must exactly match
                                   #  - cannot embed itself (including recursively)
@@ -892,13 +892,13 @@ ERROR.Error()->STR                #Serialize an ERROR
 ERROR.ERROR_TYPE()                #Often used to differentiate INTERFACE_TYPE by error name
 
 ERROR RETURN ==>                  #Returned as MVAL: VAL, ERROR|nil, to be tested by caller
-                                  #Preferred if recoverage, or libraries
+                                  #Preferred if recoverable or libraries
                                   #Better for return type to be error, not specific ERROR_TYPE, because it restricts what's exposed
                                   #  - can still document ERROR_TYPE, and user can test type or transtype
                                   #Should return nil (i.e. error(nil)), not specific ERROR_TYPE(nil)
                                   #  - because it would be transtyped to INTERFACE error, which would then not be nil
 ERROR PANIC ==>                   #panic(ERROR)
-                                  #Preferred if not recoverable and not libraries
+                                  #Preferred if neither recoverable nor libraries
 
 runtime.Error                     #ERROR_INTERFACE_TYPE
                                   #Panicked by language runtime errors, such as:
@@ -939,7 +939,7 @@ GOROUTINE ==>                     #Like coroutine:
                                   #     - CHAN<- or <-CHAN
                                   #     - runtime.Gosched()
                                   #     - pre-emptively, i.e. in-between two safe statements, after the goroutine has run for some time
-                                  #  - when continue, inverse
+                                  #  - when continue, take thread from pool
 
 runtime.Gosched()                 #Make current goroutine yield.
                                   #I.e. allow other goroutines to use CPU before starting again.
@@ -1031,7 +1031,7 @@ select {
 for { select { ... } }            #Usually put in an infinite loop, and using return to exit
 
 len(CHAN)->UINT                   #Number of buffered elements
-cap(CHAN)->UINT                   #Buffere size
+cap(CHAN)->UINT                   #Buffered size
 
 
                                              /=+===============================+=\
