no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -1642,7 +1642,7 @@ no-useless-concat                 #Avoid STR_LIT + STR2_LIT
 prefer-template                   #Avoid STR + STR2, prefer `...`
 no-template-curly-in-string       #Avoid ${} inside "" or ''
 
-unicorn/*                        ##Module "eslint-plugin-unicorn" (37.0.0)
+unicorn/*                        ##Module "eslint-plugin-unicorn" (37.0.1)
 
 unicorn/
  prefer-string-starts-ends-with  ##Must use STR.startsWith|endsWith() when possible
@@ -1835,7 +1835,7 @@ node/prefer-dns/fs               ##Use DNS.promises.* instead of DNS.*
                                              \=+===============================+=/
 
 
-import/*                         ##Node module "eslint-plugin-import" (2.24.2)
+import/*                         ##Node module "eslint-plugin-import" (2.25.1)
                                  ##Most seem to work for both require() and import|export,
                                  ##although mostly targeting import|export
                                  ##Uses the following CONF.settings:
@@ -1879,6 +1879,7 @@ import/no-unresolved [OBJ]       ##Avoid import 'PATH' of file that do not exist
                                  ##  - amd BOOL (def: false): also check AMD define|require()
                                  ##  - ignore 'REGEXP'_ARR: whitelists
                                  ##  - caseSensitive BOOL (def: true)
+                                 ##  - caseSensitiveStrict BOOL: if false (def), caseSensitive does not check check of cwd
 node/no-missing-require [OBJ]    ##Avoid require('PATH') if file at 'PATH' does not exist
                                  ##OBJ: allowModules, tryExtensions, resolvePaths (see above)
 node/no-unpublished-require [OBJ]##Avoid require('PATH') if file is not in package.json 'files', or it is in .npmignore
@@ -1886,7 +1887,8 @@ node/no-unpublished-require [OBJ]##Avoid require('PATH') if file is not in packa
                                  ##OBJ: allowModules, tryExtensions, convertPath (see above)
 node/no-missing-import [OBJ]     ##Same as no-missing-require, but for ES6 import
 node/no-unpublished-import [OBJ] ##Same as no-unpublished-require, but for ES6 import
-import/no-unused-modules [OBJ]   ##Avoid exports that are not imported anywhere (if OBJ.unusedExports true) (dynamic import excluded)
+import/no-unused-modules [OBJ]   ##Avoid exports that are not imported anywhere (if OBJ.unusedExports true)
+                                 ##Works with dynamic imports, providing the argument is a STR
                                  ##Also report modules with no exports (if OBJ.missingExports true)
                                  ##OBJ:
                                  ##  - src 'PATH'_ARR (def: process.cwd()): to include
@@ -2062,7 +2064,7 @@ import/no-webpack-loader-syntax  ##Avoid import|require using Webpack loader syn
 
 import/no-restricted-paths [OBJ] ##Blacklists import|require of any file inside some DIR when inside some specific DIR2
                                  ##OBJ:
-                                 ##  - zones OBJ_ARR: target DIR2, from DIR, except DIR_ARR, message STR
+                                 ##  - zones OBJ_ARR: target DIR_GLOB2, from DIR_GLOB, except DIR_GLOB_ARR, message STR
                                  ##  - basePath DIR3 (def: $PWD): of DIR2|DIR
 
 unicorn/import-index [OBJ]       ##Avoid import|require of index.js with './index.js' or 'DIR/'. Prefer 'DIR'
