no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -1537,6 +1537,7 @@ no-invalid-this [OBJ]             #Avoid this outside methods
 class-methods-use-this [OBJ]      #CLASS methods must use "this"
                                   #OBJ:
                                   #  - exceptMethods "FUNC"_ARR
+                                  #  - enforceForClassFields BOOL (def: true)
 consistent-this [STR]             #Variables assigned with "this" must be named 'VAR' (def: 'that')
 unicorn/no-this-assignment        #Do not assign `this` to a variable
 unicorn/no-static-only-class      #No CLASS with only static methods
@@ -1554,7 +1555,10 @@ unicorn/prefer-prototype-methods ##Prefer Object|Array.prototype.METHOD.call|app
 no-extend-native [OBJ]            #Avoid extending native types
                                   #OBJ: exceptions 'TYPE'_ARR
 
-max-classes-per-file [NUM]        #Max NUM (def: 1) CLASS perf file
+max-classes-per-file [NUM|OBJ]    #Max NUM (def: 1) CLASS per file
+                                  #OBJ:
+                                  #  - max NUM
+                                  #  - ignoreExpressions BOOL (def: false): ignore anonymous CLASSes
 fp/no-class                      ##Avoid class
 fp/no-this                       ##Avoid this
 unicorn/
