no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -9,7 +9,7 @@ ALTERNATIVES ==>                  #  - eslint (prefered): more rules, more confi
                                   #  - jscs: not maintained, merged with eslint
                                   #  - jshint
 
-VERSION ==>                       #7.32.0
+VERSION ==>                       #8.0.0
                                   #JavaScript linter, using Espree parser.
 
 TYPE                              #ESTree type
@@ -213,7 +213,7 @@ eslint --fix                      #Automatically changes files to fix some of th
 
 eslint --fix-dry-run              #Dry run. Must be used with another --format
 
-eslint --fix-type STR             #Only apply --fix for one the types STR: 'problem', 'suggestion', 'layout'
+eslint --fix-type STR             #Only apply --fix for one the types STR: 'problem', 'suggestion', 'layout', 'directive'
 
 
                                              /=+===============================+=\
